--- a/R/Preliminary_report_traditional_stability.Rmd
+++ b/R/Preliminary_report_traditional_stability.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Preliminary report - Temperature and biodiversity influence community stability differently in birds and fishes
-author: "Shyamolina Ghosh, Owen Petchey"
+author: "Shyamolina Ghosh, Blake Matthews, Owen Petchey"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   bookdown::html_document2:
@@ -65,7 +65,7 @@ knitr::include_graphics(here("Results/some_assets/realdata_temperature_timeserie
 
 (Perhaps make this into a table.)
 
-Let $N_{i,t,s}$ be the abundance (sometimes it was biomass data when abundance data were not available) of species $i$ at time $t$ at site $s$. Total abundance at time $t$ at site $s$ is $N_{t,s} = \sum_{i=1}^{s} N_{t,s,i}$. 
+Let $n_{i,t,s}$ be the abundance (sometimes it was biomass data when abundance data were not available) of species $i$ at time $t$ at site $s$. Total abundance at time $t$ at site $s$ is $N_{t,s} = \sum_{i=1}^{s} n_{t,s,i}$. 
 
 *Community stability* at site $s$ was estimated as the inverse of the coefficient of temporal variation in total community abundance (when abundance info were not available, then biomass): $TempStab_s = 1 / CV(N_{t,s}) = abs(mean(N_{t,s})) / sd(N_{t,s})$
 
